Fix loading post on mobile, fix loading post from file, add error checks

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,6 +91,7 @@ html {
 .mouse-hover:hover {
   background-color: whitesmoke;
   transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .container {
